--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
   <div class="row">
     <div class="col">
       <h1>Производство промышленных систем водоподготовки, водоочистки и водопроводной арматуры</h1>
+      <button type="button" class="btn btn-secondary"
+      data-bs-toggle="tooltip" data-bs-placement="bottom"
+      data-bs-title="Нажмите, чтобы записаться на консультацию">
+Оставить заявку
+</button>
     </div>
   </div>
 </div>
