--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="col">
       <h1>Производство промышленных систем водоподготовки, водоочистки и водопроводной арматуры</h1>
-      <button type="button" class="btn btn-secondary"
+      <button type="button" href="#send" class="btn btn-secondary"
       data-bs-toggle="tooltip" data-bs-placement="bottom"
       data-bs-title="Нажмите, чтобы записаться на консультацию">
 Оставить заявку
