--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
   <div class="row">
     <div class="col">
       <h1>Производство промышленных систем водоподготовки, водоочистки и водопроводной арматуры</h1>
-      <button type="button" href="#send" class="btn btn-secondary"
+      <a type="button" class="btn btn-primary" href="#send"
       data-bs-toggle="tooltip" data-bs-placement="bottom"
       data-bs-title="Нажмите, чтобы записаться на консультацию">
 Оставить заявку
-</button>
+</a>
     </div>
   </div>
 </div>
